--- a/template/result.html
+++ b/template/result.html
@@ -69,21 +69,33 @@
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact section-bg">
         <div class="container" data-aos="fade-up">
-            <br/><br/><br/>
-            <div class="section-title">
-                <h2>Rcomendações</h2>
-                <p>RESULTADO</p>
-            </div>
-
-            <div class="row">
-
-                <div class="col-lg-12">
-                    <br>
-                    <b class="prediction"><h3><b><u> {{ result }} </u></b></h3></b>
-                    </div>
+            <!--
+                <br/><br/><br/>
+                <div class="section-title">
+                    <h2>Recomendações</h2>
+                    <p>RESULTADO</p>
                 </div>
-
-            </div>
+    
+                <div class="row">
+    
+                    <div class="col-lg-12">
+                        <br>
+                        <b class="prediction"><h3><b><u> {{ result }} </u></b></h3></b>
+                        </div>
+                    </div>
+    
+                </div>
+            -->
+            {% for city, result in result.items() %}
+                <div class="card">
+                    <h2>{{ city }}</h2>
+                    <ul>
+                    {% for recommendation in result %}
+                        <li>{{ recommendation }}</li>
+                    {% endfor %}
+                    </ul>
+                </div>
+            {% endfor %}
 
         </div>
     </section><!-- End Contact Section -->
