atualizando css e forms

--- a/template/form_pref.html
+++ b/template/form_pref.html
@@ -42,7 +42,6 @@
 
 
 
-
 <main id="main">
 
     <!-- ======= Contact Section ======= -->
@@ -96,21 +95,25 @@
                             </tr>
                             
                             <tr class="form_wrapper">
-                                <td colspan='2'><input type="submit" value="Cadastrar"/></td>
+                                <td colspan='2' ><input type="submit" value="Cadastrar" class="botão"
+                                   /></td>
                             </tr>
 
                         </table>
 
 
                     </form>
+                   
                 </div>
 
             </div>
 
         </div>
+        
     </section><!-- End Contact Section -->
 
 </main><!-- End #main -->
+
 
 
 <div id="preloader"></div>
