--- a/template/assets/css/style.css
+++ b/template/assets/css/style.css
@@ -29,7 +29,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 .form_wrapper .botão{
   background-color: #008000;
-  
+  margin-top: 1.7rem;
   color: #000000;
 }
 .footer{
@@ -37,7 +37,24 @@ h1, h2, h3, h4, h5, h6 {
   height: 200px;
 }
 
+.header{
+  width: 6,25rem;
+  height: 6.25rem;
+}
 
+.footer {
+  background-color: #424246;
+  color: #e7772d;
+  text-align: center;
+  height: 9rem;
+  border: 0.5px solid black;
+  max-height: 8rem;
+  
+}
+
+.footer p{
+  margin-top: 3.6rem;
+}
 /*--------------------------------------------------------------
 # Preloader
 --------------------------------------------------------------*/
@@ -468,8 +485,9 @@ section {
   background-color: #424246;
 }
 
-.section-title {
-  padding-bottom: 40px;
+.section-title p{
+  padding-bottom: 0,625rem;
+  padding-top: 20px;
 }
 .section-title h2 {
   font-size: 14px;
@@ -1184,147 +1202,17 @@ section {
   transition: left ease-in-out 0.3s;
 }
 
-/*--------------------------------------------------------------
-# Pricing
---------------------------------------------------------------*/
-.pricing .row {
-  padding-top: 40px;
-}
-.pricing .box {
-  padding: 80px 40px;
-  margin-bottom: 30px;
-  box-shadow: 0px 5px 90px 0px rgba(110, 123, 131, 0.1);
-  background: #fff;
-  text-align: center;
-}
-.pricing h3 {
-  font-weight: 300;
-  margin-bottom: 15px;
-  font-size: 28px;
-}
-.pricing h4 {
-  font-size: 46px;
-  color: #0b2341;
-  font-weight: 400;
-  font-family: "Open Sans", sans-serif;
-  margin-bottom: 25px;
-}
-.pricing h4 span {
-  color: #bababa;
-  font-size: 18px;
-  display: block;
-}
-.pricing ul {
-  padding: 0;
-  list-style: none;
-  color: #999;
-  text-align: left;
-  line-height: 20px;
-}
-.pricing ul li {
-  padding-bottom: 12px;
-}
-.pricing ul i {
-  color: #061551;
-  font-size: 18px;
-  padding-right: 4px;
-}
-.pricing ul .na {
-  color: #ccc;
-}
-.pricing ul .na i {
-  color: #ccc;
-}
-.pricing ul .na span {
-  text-decoration: line-through;
-}
-.pricing .get-started-btn {
-  display: inline-block;
-  padding: 10px 40px 11px 40px;
-  border-radius: 4px;
-  color: #0b2341;
-  transition: none;
-  font-size: 14px;
-  font-weight: 600;
-  transition: 0.3s;
-  border: 2px solid #0b2341;
-  background: #fff;
-}
-.pricing .get-started-btn:hover {
-  background: #0b2341;
-  color: #fff;
-}
-.pricing .featured {
-  z-index: 10;
-  padding: 100px 40px;
-  border: 4px solid #061551;
-}
-.pricing .featured .get-started-btn {
-  background: #061551;
-  color: #fff;
-  border-color: #061551;
-}
-.pricing .featured .get-started-btn:hover {
-  background: #ef6445;
-}
-@media (max-width: 992px) {
-  .pricing .box {
-    max-width: 60%;
-    margin: 0 auto 30px auto;
-  }
-}
-@media (max-width: 767px) {
-  .pricing .box {
-    max-width: 80%;
-    margin: 0 auto 30px auto;
-  }
-}
-@media (max-width: 420px) {
-  .pricing .box {
-    max-width: 100%;
-    margin: 0 auto 30px auto;
-  }
-}
-
-/*--------------------------------------------------------------
-# Frequently Asked Questions
---------------------------------------------------------------*/
-.faq .faq-item {
-  margin: 20px 0;
-  padding: 20px 0;
-  border-bottom: 1px solid #e9f1fb;
-}
-.faq .faq-item i {
-  color: #669ee5;
-  font-size: 20px;
-  float: left;
-  line-height: 0;
-  padding: 13px 0 0 0;
-  margin: 0;
-}
-.faq .faq-item h4 {
-  font-size: 16px;
-  line-height: 26px;
-  font-weight: 500;
-  margin: 0 0 10px 28px;
-  font-family: "Poppins", sans-serif;
-}
-.faq .faq-item p {
-  font-size: 15px;
-}
 
 /*--------------------------------------------------------------
 # Contact
 --------------------------------------------------------------*/
 .col-lg-12{
-  background-color: linear-gradient(to right, #00FFFF, #008000);
+  background-color: linear-gradient(to left, #00FFFF, #008000);
         
 }
 .col-lg-12 h3{
   color: #000000;
 }
-
-
 
 
 .contact .info-box {
@@ -1439,174 +1327,3 @@ section {
   }
 }
 
-/*--------------------------------------------------------------
-# Breadcrumbs
---------------------------------------------------------------*/
-.breadcrumbs {
-  padding: 15px 0;
-  background: #f6f9fd;
-  min-height: 40px;
-  margin-top: 82px;
-}
-@media (max-width: 992px) {
-  .breadcrumbs {
-    margin-top: 74px;
-  }
-}
-.breadcrumbs h2 {
-  font-size: 28px;
-  font-weight: 600;
-  color: #0b2341;
-}
-.breadcrumbs ol {
-  display: flex;
-  flex-wrap: wrap;
-  list-style: none;
-  padding: 0 0 10px 0;
-  margin: 0;
-  font-size: 14px;
-}
-.breadcrumbs ol li + li {
-  padding-left: 10px;
-}
-.breadcrumbs ol li + li::before {
-  display: inline-block;
-  padding-right: 10px;
-  color: #123a6d;
-  content: "/";
-}
-
-/*--------------------------------------------------------------
-# Footer
---------------------------------------------------------------*/
-#footer {
-  background: #071527;
-  padding: 0 0 30px 0;
-  color: #fff;
-  font-size: 14px;
-}
-#footer .footer-top {
-  padding: 60px 0 30px 0;
-}
-#footer .footer-top .footer-info {
-  margin-bottom: 15px;
-  background: #05101e;
-  border-top: 4px solid #061551;
-  text-align: center;
-  padding: 30px 20px;
-}
-#footer .footer-top .footer-info h3 {
-  font-size: 24px;
-  margin: 0 0 20px 0;
-  padding: 2px 0 2px 0;
-  line-height: 1;
-  font-weight: 700;
-}
-#footer .footer-top .footer-info p {
-  font-size: 14px;
-  line-height: 24px;
-  margin-bottom: 0;
-  font-family: "Raleway", sans-serif;
-}
-#footer .footer-top .social-links a {
-  font-size: 18px;
-  display: inline-block;
-  color: #fff;
-  line-height: 1;
-  padding: 8px 0;
-  margin-right: 4px;
-  border-radius: 4px;
-  text-align: center;
-  width: 36px;
-  height: 36px;
-  transition: 0.3s;
-  background: #0a1e38;
-}
-#footer .footer-top .social-links a:hover {
-  color: #fff;
-  background: #061551;
-  text-decoration: none;
-}
-#footer .footer-top h4 {
-  font-size: 16px;
-  font-weight: 600;
-  color: #fff;
-  position: relative;
-  padding-bottom: 12px;
-}
-#footer .footer-top .footer-links {
-  margin-bottom: 30px;
-}
-#footer .footer-top .footer-links ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-#footer .footer-top .footer-links ul i {
-  padding-right: 2px;
-  color: #ef6445;
-  font-size: 18px;
-  line-height: 1;
-}
-#footer .footer-top .footer-links ul li {
-  padding: 10px 0;
-  display: flex;
-  align-items: center;
-}
-#footer .footer-top .footer-links ul li:first-child {
-  padding-top: 0;
-}
-#footer .footer-top .footer-links ul a {
-  color: #fff;
-  transition: 0.3s;
-  display: inline-block;
-  line-height: 1;
-}
-#footer .footer-top .footer-links ul a:hover {
-  color: #ef6445;
-}
-#footer .footer-top .footer-newsletter form {
-  margin-top: 30px;
-  background: #fff;
-  padding: 6px 10px;
-  position: relative;
-  border-radius: 4px;
-}
-#footer .footer-top .footer-newsletter form input[type=email] {
-  border: 0;
-  padding: 4px;
-  width: calc(100% - 110px);
-}
-#footer .footer-top .footer-newsletter form input[type=submit] {
-  position: absolute;
-  top: 0;
-  right: -2px;
-  bottom: 0;
-  border: 0;
-  background: none;
-  font-size: 16px;
-  padding: 0 20px 2px 20px;
-  background: #061551;
-  color: #fff;
-  transition: 0.3s;
-  border-radius: 0 4px 4px 0;
-}
-#footer .footer-top .footer-newsletter form input[type=submit]:hover {
-  background: #ef6445;
-}
-#footer .copyright {
-  border-top: 1px solid #0f2f57;
-  text-align: center;
-  padding-top: 30px;
-}
-#footer .credits {
-  padding-top: 10px;
-  text-align: center;
-  font-size: 13px;
-  color: #fff;
-}
-@media (max-width: 575px) {
-  #footer .footer-top .footer-info {
-    margin: -20px 0 30px 0;
-  }
-}
