Limpando css, alterando página de forms, adicionando novo footer e foto dos integrantes do DevTeam

--- a/template/form_pref.html
+++ b/template/form_pref.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Classificador de flor com ML</title>
+    <title>Tela de Cadastro</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -91,15 +91,13 @@
                                 <td class="col-input"><input type="text" class="form-control" name="tipo_viagem"
                                                             placeholder="tipo_viagem"></td>
                             </tr>
-                            
                             <tr class="form_wrapper">
-                                <td colspan='2' ><input type="submit" value="Cadastrar" class="botão"
-                                   /></td>
+                                <td colspan="2">
+                                    <input type="submit" value="Cadastrar" class="botão" />
+                                </td>
                             </tr>
-
+                            
                         </table>
-
-
                     </form>
                    
                 </div>
@@ -112,7 +110,31 @@
 
 </main><!-- End #main -->
 
-
+<footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <h3>Nossa equipe</h3>
+          <div class="team-member">
+            <img src="assets/img/DiogoFT.jpg" alt="Diogo Kahn">
+            <h4>John Doe</h4>
+            <p>Desenvolvedor web</p>
+          </div>
+          <div class="team-member">
+            <img src="img/jane-doe.jpg" alt="Jane Doe">
+            <h4>Jane Doe</h4>
+            <p>Designer gráfico</p>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <h3>Contato</h3>
+          <p>Entre em contato conosco através do telefone:</p>
+          <p class="phone-number">(11) 1234-5678</p>
+        </div>
+      </div>
+    </div>
+  </footer>
+  
 
 <!-- Vendor JS Files -->
 <script src="assets/vendor/purecounter/purecounter.js"></script>
@@ -125,10 +147,6 @@
 <!-- Template Main JS File -->
 <script src="assets/js/main.js"></script>
 
-<footer class="footer">
-   <p>Created by Japetech - 2023</p> 
-
-  </footer>
 
 
 </body>
