--- a/template/form_pref.html
+++ b/template/form_pref.html
@@ -18,6 +18,10 @@
           rel="stylesheet">
 
     <!-- Vendor CSS Files -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+     integrity="sha512-2V7ahx/nZrP7JF8CvT1Vugvt1CtATsY7bP/HM0uERpZBgFhRwWakc/rarvG+Jqyf4OL2NsjNly8+eaj1LZO6xg==" 
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
     <link href="assets/vendor/aos/aos.css" rel="stylesheet">
     <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -115,22 +119,47 @@
       <div class="row">
         <div class="col-md-6">
           <h3>Nossa equipe</h3>
-          <div class="team-member">
-            <img src="assets/img/DiogoFT.jpg" alt="Diogo Kahn">
-            <h4>John Doe</h4>
-            <p>Desenvolvedor web</p>
+  
+          <div class="team-members">
+            <div class="team-member">
+              <img src="assets/img/DiogoFT.jpg" alt="Diogo Kahn">
+              <h4>Diogo Kahn</h4>
+              
+            </div>
+            <div class="team-member">
+              <img src="assets/img/MateusFT.jpg" alt="Mateus Leme">
+              <h4>Mateus Leme</h4>
+              
+            </div>
+            <div class="team-member">
+              <img src="assets/img/LuísFT.jpg" alt="Luís Felipe">
+              <h4>Luís Felipe</h4>
+              
+            </div>
+            <div class="team-member">
+              <img src="assets/img/PedroFT.jpg" alt="Pedro Chueiri">
+              <h4>Pedro Chueiri</h4>
+             
+            </div>
+            <div class="team-member">
+              <img src="assets/img/HeitorFT.jpg" alt="Heitor Borba">
+              <h4>Heitor Borba</h4>
+              
+            </div>
           </div>
-          <div class="team-member">
-            <img src="img/jane-doe.jpg" alt="Jane Doe">
-            <h4>Jane Doe</h4>
-            <p>Designer gráfico</p>
+       
+          
+  
+        </div>
+  
+        <div class="col-md-6 text-md-right">
+            <h3>Contato</h3>
+            <p>Entre em contato conosco através do email do nosso Tech Lead:</p>
+            <br>
+            <p class="email"><img src="assets/img/email.png" alt="caixa de email" 
+                style="margin-right: 0.5rem;"> heitor.marini07@gmail.com</p>
           </div>
-        </div>
-        <div class="col-md-6">
-          <h3>Contato</h3>
-          <p>Entre em contato conosco através do telefone:</p>
-          <p class="phone-number">(11) 1234-5678</p>
-        </div>
+  
       </div>
     </div>
   </footer>
