--- a/template/form_pref.html
+++ b/template/form_pref.html
@@ -154,10 +154,13 @@
   
         <div class="col-md-6 text-md-right">
             <h3>Contato</h3>
-            <p>Entre em contato conosco através do email do nosso Tech Lead:</p>
+            <p>Entre em contato conosco através do email :</p>
             <br>
-            <p class="email"><img src="assets/img/email.png" alt="caixa de email" 
-                style="margin-right: 0.5rem;"> heitor.marini07@gmail.com</p>
+            <p class="email" style="margin-top: -1.5rem;"><img src="assets/img/email.png" alt="caixa de email" 
+                style="margin-right: 0.5rem; margin-bottom: 0.2rem;"> heitor.marini07@gmail.com</p>
+                
+                <p class=" direitos">Created by JapeTech - 2023</p>
+                <img src="assets/img/JapeTech 2.0 (1).jpg" alt="Logo JapeTech" class="japetech">
           </div>
   
       </div>
