--- a/template/form_pref.html
+++ b/template/form_pref.html
@@ -93,7 +93,7 @@
                                                              placeholder="Estado"></td>
                                 <td class="col-label"><label>Tipo de Viagem</label></td>
                                 <td class="col-input"><input type="text" class="form-control" name="tipo_viagem"
-                                                            placeholder="tipo_viagem"></td>
+                                                            placeholder="Tipo_viagem"></td>
                             </tr>
                             <tr class="form_wrapper">
                                 <td colspan="2">
@@ -159,7 +159,7 @@
             <p class="email" style="margin-top: -1.5rem;"><img src="assets/img/email.png" alt="caixa de email" 
                 style="margin-right: 0.5rem; margin-bottom: 0.2rem;"> heitor.marini07@gmail.com</p>
                 
-                <p class=" direitos">Created by JapeTech - 2023</p>
+                <p class=" direitos">Created by JapeTech Team- 2023</p>
                 <img src="assets/img/JapeTech 2.0 (1).jpg" alt="Logo JapeTech" class="japetech">
           </div>
   
