Alterando classe container para estilizar

--- a/template/result.html
+++ b/template/result.html
@@ -47,7 +47,7 @@
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact section-bg">
-        <div class="container" data-aos="fade-up">
+        <div class="container-result" data-aos="fade-up">
             <!--
                 <br/><br/><br/>
                 <div class="section-title">
