--- a/template/form_pref.html
+++ b/template/form_pref.html
@@ -44,6 +44,18 @@
 
 <body>
 
+  <header>
+    <nav>
+      <div class="logo">
+        <h1>TourMate</h1>
+        <p>O futuro chega voando</p>
+        <img src="assets/img/TourMate 2 (1).jpg" alt="Logo TourMate">
+      </div>
+      
+    </nav>
+  </header>
+  
+
 <main id="main">
 
     <!-- ======= Contact Section ======= -->
