--- a/template/result.html
+++ b/template/result.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Classificador de flor com ML</title>
+    <title>Tela de Resultado</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
