--- a/template/assets/css/style.css
+++ b/template/assets/css/style.css
@@ -360,7 +360,8 @@ section {
 ------------------------------------*/
 header {
   background-color: #061551;
-  box-shadow: 1px 2px 4px #e7772d;
+  height: auto;
+  
 }
 
 .logo {
@@ -374,13 +375,14 @@ header {
   font-weight: bold;
   margin-right: 0.5rem;
   color: #e7772d;
+  margin-top: 0.5rem;
 
 }
 
 .logo p {
   font-size: 1rem;
   color: #ffffff;
-  margin-top: 1rem;
+  margin-top: 1.4rem;
 }
 
 .logo img{
