--- a/template/form_pref.html
+++ b/template/form_pref.html
@@ -61,7 +61,7 @@
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact section-bg">
         <div class="container" data-aos="fade-up">
-            <br/><br/><br/>
+            
             <div class="section-title">
                 <h2>Tourmate</h2>
                 <p>Cadastro</p>
@@ -127,57 +127,51 @@
 </main><!-- End #main -->
 
 <footer>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-          <h3>Nossa equipe</h3>
-  
-          <div class="team-members">
-            <div class="team-member">
-              <img src="assets/img/DiogoFT.jpg" alt="Diogo Kahn">
-              <h4>Diogo Kahn</h4>
-              
-            </div>
-            <div class="team-member">
-              <img src="assets/img/MateusFT.jpg" alt="Mateus Leme">
-              <h4>Mateus Leme</h4>
-              
-            </div>
-            <div class="team-member">
-              <img src="assets/img/LuísFT.jpg" alt="Luís Felipe">
-              <h4>Luís Felipe</h4>
-              
-            </div>
-            <div class="team-member">
-              <img src="assets/img/PedroFT.jpg" alt="Pedro Chueiri">
-              <h4>Pedro Chueiri</h4>
-             
-            </div>
-            <div class="team-member">
-              <img src="assets/img/HeitorFT.jpg" alt="Heitor Borba">
-              <h4>Heitor Borba</h4>
-              
-            </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <h3>Equipe TourMate</h3>
+        <div class="team-members">
+          <div class="team-member">
+            <img src="assets/img/DiogoFT.jpg" alt="Diogo Kahn">
+            <h4>Diogo Kahn</h4>
+            
           </div>
-       
-          
-  
+          <div class="team-member">
+            <img src="assets/img/MateusFT.jpg" alt="Mateus Leme">
+            <h4>Mateus Leme</h4>
+            
+          </div>
+          <div class="team-member">
+            <img src="assets/img/LuísFT.jpg" alt="Luís Felipe">
+            <h4>Luís Felipe</h4>
+           
+          </div>
+          <div class="team-member">
+            <img src="assets/img/PedroFT.jpg" alt="Pedro Chueiri">
+            <h4>Pedro Chueiri</h4>
+            
+          </div>
+          <div class="team-member">
+            <img src="assets/img/HeitorFT.jpg" alt="Heitor Borba">
+            <h4>Heitor Borba</h4>
+            
+          </div>
         </div>
-  
-        <div class="col-md-6 text-md-right">
-            <h3>Contato</h3>
-            <p>Entre em contato conosco através do email :</p>
-            <br>
-            <p class="email" style="margin-top: -1.5rem;"><img src="assets/img/email.png" alt="caixa de email" 
-                style="margin-right: 0.5rem; margin-bottom: 0.2rem;"> heitor.marini07@gmail.com</p>
-                
-                <p class=" direitos">Created by JapeTech Team- 2023</p>
-                <img src="assets/img/JapeTech 2.0 (1).jpg" alt="Logo JapeTech" class="japetech">
-          </div>
-  
+      </div>
+      <div class="col-md-6 text-md-right">
+        <h3>Contato</h3>
+        <p>Entre em contato conosco para mais informações sobre o TourMate:</p>
+        <br>
+        <p class="email" style="margin-top: -1.5rem;"><img src="assets/img/email.png" alt="caixa de email" 
+            style="margin-right: 0.5rem; margin-bottom: 0.2rem;"> tourmate@exemplo.com</p>
+        <p class="direitos">Todos os direitos reservados © 2023 JapeTech</p>
+        <img src="assets/img/JapeTech 2.0 (1).jpg" alt="Logo JapeTech" class="japetech-logo">
       </div>
     </div>
-  </footer>
+  </div>
+</footer>
+
   
 
 <!-- Vendor JS Files -->
