--- a/template/result.html
+++ b/template/result.html
@@ -46,7 +46,7 @@
 <main id="main">
 
     <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact section-bg">
+    <section id="contact" class="contact result-background">
         <div class="container-result" data-aos="fade-up">
             <!--
                 <br/><br/><br/>
