Mudando classe main da página de resultado e estilizando

--- a/template/result.html
+++ b/template/result.html
@@ -43,7 +43,7 @@
 
 
 
-<main id="main">
+<main id="main-result">
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact result-background">
