--- a/template/assets/css/style.css
+++ b/template/assets/css/style.css
@@ -166,10 +166,10 @@ margin-bottom: 2.3rem;
   }
 }
 /*--------------------------------------------------------------
-# Container - da página de resultado
+# Container - página de resultado
 --------------------------------------------------------------*/
 .result-background{
-  background-color: #fff;
+  background-color: #727272;
 }
 
 .container-result {
@@ -180,6 +180,10 @@ margin-bottom: 2.3rem;
   margin: 50px auto;
   max-width: 800px;
   
+}
+
+.main-result{
+  background-color: #727272;
 }
 
 
