Removendo comentarios do app.py, ajustando forms na aprte de senha, alterando estilo da pagina result

--- a/template/form_pref.html
+++ b/template/form_pref.html
@@ -88,8 +88,8 @@
                                 <td class="col-input"><input type="text" class="form-control" name="email"
                                                              placeholder="Email"></td>
                                 <td class="col-label"><label>Senha</label></td>
-                                <td class="col-input"><input type="text" class="form-control" name="senha"
-                                                             placeholder="Senha"></td>
+                                <td class="col-input"><input type="password" class="form-control" name="senha" placeholder="Senha"></td>
+                                                             
                             </tr>
 
                             <tr class="form_wrapper">
